fixed body overflow issue

--- a/4-styles.css
+++ b/4-styles.css
@@ -21,6 +21,12 @@
   --mobile-width: 480px;
 }
 
+body {
+  margin: 0;
+  overflow-x: hidden;
+}
+
+
 /* Content Selector */
 .content {
   max-width: var(--content-mxw);
@@ -30,6 +36,7 @@
 /* Main Section */
 main {
   width: 100%;
+  margin: 0;
 }
 
 /* Hero Section */
@@ -37,7 +44,7 @@ main {
   background-image: url("./images/headphones_hero_1.jpg");
   background-position: 56%;
   height: 800px;
-  width: 100%;
+  width: 99%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -164,6 +171,7 @@ main {
 /* Middle Screen */
 
 @media (max-width: 1048px) {
+
   /* Content Selector */
   .content {
     display: flex;
@@ -174,10 +182,10 @@ main {
 
   /* Hero Section */
   .hero {
-    background-image: url("./images/headphones_hero_1.jpg");
+    /* background-image: url("./images/headphones_hero_1.jpg");
     background-repeat: no-repeat;
-    background-position-x: 58%;
-    background-size: 154.85% 100%;
+    background-size: 100% 100%;
+    background-position-x: center; */
   }
 
   .nav {
@@ -195,22 +203,20 @@ main {
     flex-direction: column;
     justify-items: flex-start;
   }
+
   .nav-links {
     display: none;
   }
 
   .hero {
-    background-image: url("./images/headphones_hero_1.jpg");
-    background-repeat: no-repeat;
-    background-position-x: 42%;
-    background-position-y: 30%;
-    background-size: 200% 150%;
+    background-size: 100% 100%;
   }
 
   .hero-content {
     width: 357px;
     height: 436px;
   }
+
   .hero-content h1 {
     display: flex;
     flex-direction: column;
@@ -282,7 +288,7 @@ main {
     display: none;
   }
 
-  #menu-checkbox:checked ~ .nav-links {
+  #menu-checkbox:checked~.nav-links {
     display: flex;
     flex-direction: column;
     margin-top: 10px;
@@ -397,7 +403,7 @@ main {
     height: 1631px;
   }
 
-  .part-one { 
+  .part-one {
     margin-top: 103px;
     width: 325px;
     height: 288px;
